--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "webclient",
+  "name": "projectlink",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "formik": "1.5.7",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "styled-components": "4.2.1",
     "typescript": "3.5.1"
@@ -12,6 +14,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "firebase deploy",
+    "deployfunctions": "firebase deploy --only function",
+    "deployclient": "firebase deploy --only hosting",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -31,10 +36,12 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "8.0.4",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.4",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
-    "@types/styled-components": "4.1.15"
+    "@types/styled-components": "4.1.15",
+    "jest-dom": "^3.5.0"
   }
 }
