start moving to theme-ui

--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "^6.2.4",
+    "firebase": "6.2.4",
     "formik": "1.5.7",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
     "styled-components": "^5.0.0-beta.6",
+    "theme-ui": "0.2.36",
+    "typeface-inter": "0.0.77",
     "typescript": "3.5.1"
   },
   "scripts": {
@@ -44,6 +46,7 @@
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.4",
     "@types/styled-components": "4.1.15",
+    "@types/theme-ui": "^0.2.2",
     "jest-dom": "^3.5.0"
   }
 }
