strip out all the create-react-app stuff so this repo can just be firebase

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -2,14 +2,18 @@
   "compilerOptions": {
     "module": "commonjs",
     "noImplicitReturns": true,
+    "esModuleInterop": true,
+    "noImplicitAny": false,
     "noUnusedLocals": true,
-    "outDir": "lib",
+    "outDir": "../dist",
     "sourceMap": true,
+    "skipLibCheck": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "isolatedModules": false
   },
   "compileOnSave": true,
   "include": [
-    "src"
+    "./index.ts"
   ]
 }
