--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -5,7 +5,7 @@
     "esModuleInterop": true,
     "noImplicitAny": false,
     "noUnusedLocals": true,
-    "outDir": "../dist",
+    "outDir": "lib",
     "sourceMap": true,
     "skipLibCheck": true,
     "strict": true,
@@ -14,6 +14,6 @@
   },
   "compileOnSave": true,
   "include": [
-    "./index.ts"
+    "src/index.ts"
   ]
 }
