--- a/functions/package.json
+++ b/functions/package.json
@@ -9,10 +9,12 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "12"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@projectlink/core": "https://github.com/projectlink-io/core.git#master",
+    "algoliasearch": "^4.5.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
