--- a/functions/package.json
+++ b/functions/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "functions",
+  "name": "@projectlink/functions",
+  "version": "0.0.1",
   "scripts": {
     "build": "tsc",
+    "tsc": "tsc",
+    "test": "jest",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
+    "emulators": "export GOOGLE_APPLICATION_CREDENTIALS=\"../web/projectlink-dev-adminsdk.json\"; firebase emulators:start",
+    "start": "npm run build && npm run emulators",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -12,15 +16,20 @@
     "node": "12"
   },
   "main": "lib/index.js",
+  "private": true,
   "dependencies": {
-    "@projectlink/core": "https://github.com/projectlink-io/core.git#master",
-    "algoliasearch": "^4.5.1",
-    "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "@projectlink/core": "file:../core",
+    "algoliasearch": "4.5.1",
+    "firebase-admin": "9.2.0",
+    "firebase-functions": "3.11.0",
+    "googleapis": "61.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-jest": "^26.6.0",
     "firebase-functions-test": "^0.2.2",
-    "typescript": "^4.0.2"
-  },
-  "private": true
+    "jest": "^26.6.0",
+    "typescript": "4.0.3"
+  }
 }
