--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -4,7 +4,7 @@
     "noImplicitReturns": true,
     "esModuleInterop": true,
     "noImplicitAny": false,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "outDir": "lib",
     "sourceMap": true,
     "skipLibCheck": true,
@@ -15,5 +15,8 @@
   "compileOnSave": true,
   "include": [
     "src/index.ts"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
