--- a/firebase.json
+++ b/firebase.json
@@ -9,21 +9,8 @@
   "functions": {
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run build"
-    ]
-  },
-  "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
     ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "source": "functions"
   },
   "storage": {
     "rules": "storage.rules"
@@ -38,11 +25,11 @@
     "database": {
       "port": 9000
     },
-    "hosting": {
-      "port": 5000
-    },
     "pubsub": {
       "port": 8085
+    },
+    "ui": {
+      "enabled": true
     }
   }
 }
