--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "serve": "npm run build && firebase serve --only functions",
     "shell": "npm run build && firebase functions:shell",
-    "emulators": "export GOOGLE_APPLICATION_CREDENTIALS=\"../web/projectlink-dev-adminsdk.json\"; firebase emulators:start",
+    "emulators": "firebase emulators:start",
     "start": "npm run build && npm run emulators",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
@@ -18,18 +18,23 @@
   "main": "lib/index.js",
   "private": true,
   "dependencies": {
-    "@projectlink/core": "file:../core",
-    "algoliasearch": "4.5.1",
-    "firebase-admin": "9.2.0",
+    "algoliasearch": "4.6.0",
+    "deep-object-diff": "^1.1.0",
+    "firebase-admin": "9.3.0",
     "firebase-functions": "3.11.0",
-    "googleapis": "61.0.0"
+    "googleapis": "61.0.0",
+    "ngeohash": "^0.6.3",
+    "projectlink-common": "0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
-    "babel-jest": "^26.6.0",
-    "firebase-functions-test": "^0.2.2",
-    "jest": "^26.6.0",
+    "@babel/preset-typescript": "^7.12.1",
+    "@types/jest": "^26.0.15",
+    "@types/ngeohash": "^0.6.2",
+    "babel-jest": "^26.6.3",
+    "firebase-functions-test": "^0.2.3",
+    "jest": "^26.6.3",
     "typescript": "4.0.3"
   }
 }
