--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -14,7 +14,8 @@
   },
   "compileOnSave": true,
   "include": [
-    "src/index.ts"
+    "src/index.ts",
+    "test/**/*"
   ],
   "exclude": [
     "node_modules"
